# Decentralized-Dispute

contracts/: Cargo.toml
contracts/deployments/greeter/: greeter.contract  greeter.json  greeter.wasm
contracts/src/dispute/: Cargo.toml  lib.rs
contracts/src/stablecoin/: Cargo.toml  data.rs  lib.rs  testing.rs
contracts/typed-contracts/contract-info/: greeter.ts
